2006-05-18  Ales Hakl  <ales at hakl dot net>

	* src/number.c (native_acos, native_asin): inverse trigonometrics
	(native_atan): arcus tangent

2006-05-17  Ales Hakl  <ales at hakl dot net>

	* src/number.c (native_log): Natural logarithm
	(native_tan, native_cos, native_sin): Trigonometric functions

	* src/strings.c: Added DFSCH_ARG_END to mark ends of argument lists

	* src/number.c (native_abs): Absolute value function
	(native_exp): Exponent

	* NEWS: Release 0.2.0-pre2

2006-05-14  Ales Hakl  <ales at hakl dot net>

	* {dfsch,src}/parse.[hc]: Renamed from stream.[ch] to parse.[ch]

	* src/control.c (native_macro_case): slightly simplified
	when and unless macros

2006-05-13  Ales Hakl  <ales at hakl dot net>

	* scm/lib.scm (define-struct): Defaulting of slot values
	(define-struct): Indicate slot name for unknown slots

2006-05-12  Ales Hakl  <ales at hakl dot net>

	* scm/lib.scm (define-struct): Structures (preliminary)

	* src/native.c: for-each and map functions
	map works

2006-05-08  Ales Hakl  <ales at hakl dot net>

	* src/native.c: string->symbol and symbol->string

	* src/object.h (TYPE_CHECK): check for nil

	* src/native.c: string->object and object->string

2006-05-01  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h (DFSCH_DISCARD_ARG): Macro for unneeded arguments
	(like env in some macros/forms)

	* src/control.c (dfsch__control_register): split native.c to
	native and control.

	* src/native.c (native_form_let): named-let construct

2006-04-23  Ales Hakl  <ales at hakl dot net>

	* src/stream.c (tokenizer_process): create true object from cache

	* src/dfsch.c: Removed static declaration of ascii_strcasecmp

	* src/stream.c (tokenizer_process): Special case for unreadable objects

	* src/number.c (dfsch_make_number_from_string): At least some
	support for non-decimal numbers

	* src/stream.c (tokenizer_process): support for boolean and
	character escapes
	(tokenizer_process): case insensitive character names